Add more info to README

--- a/README
+++ b/README
@@ -1,13 +1,13 @@
-# Partner 1
-Name: Christie Mathews
-Student ID: 104404412
-Email: mathews.christie@gmail.com 
+Wesley Minner & Christie Mathews 
+  703549234       104404412
 
-# Partner 2
-Name: Wesley Minner
-Student ID: 703549234
-Email: wesleyminner@gmail.com
+CS 111 Operating Systems Principles
+Professor Eggert
+Winter 2016
 
+***************
+Lab 2 - Ramdisk
+***************
 
 Tasks Completed:
 * osprd_process_request function
