Add spec url to README

--- a/README
+++ b/README
@@ -5,6 +5,8 @@ CS 111 Operating Systems Principles
 Professor Eggert
 Winter 2016
 
+Spec: http://www.read.cs.ucla.edu/111/lab2
+
 ***************
 Lab 2 - Ramdisk
 ***************
